<resources>
    <string name="app_name">TreasureHunt</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcomeString">Welcome</string>
    <string name="progigy">Prodigy 2018</string>
    <string name="event">Treasure Hunt</string>
    <string name="credentials">Verify your Credentials</string>
    <string name="participation">Team Prodigy awaits your active participation.\nPlease verifiy yourself.</string>
    <string name="request">Enter the code obtained</string>
    <string name="team">Team | </string>
    <string name="prompt">Code</string>
    <string name="or">OR \"Scan\" the QR Code</string>
    <string name="scan">Scan</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="congrats">Congratulations!</string>
    <string name="returnback">Now Return to the Starting Point</string>
    <string name="failed">Oops! You did not find all the clues</string>
    <string name="exit_alert">Are you sure your want to quit Treasure Hunt?\nYou will be
                              disqualified from the game</string>
</resources>
