<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.leaf.abhi.treasurehunt.Questions_Activity">

    <TextView
        android:id="@+id/progressView"
        android:layout_width="36dp"
        android:layout_height="20dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="10/10"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/progressBar"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/promptView"
        android:layout_width="302dp"
        android:layout_height="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/request"
        android:textAlignment="viewStart"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/questionView" />

    <Button
        android:id="@+id/scanButton"
        android:layout_width="85dp"
        android:layout_height="41dp"
        android:layout_marginRight="65dp"
        android:text="@string/scan"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3" />

    <TextView
        android:id="@+id/questionView"
        android:layout_width="352dp"
        android:layout_height="171dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="2dp"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="?android:attr/textColorHighlight"
        android:text="TextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="-8dp"
        app:layout_constraintTop_toBottomOf="@+id/teamNoView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="203dp"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/or"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/codeEntery"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/teamNoView"
        android:layout_width="82dp"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="9dp"
        android:text="TextView"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar"
        tools:layout_editor_absoluteY="34dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="308dp"
        android:layout_height="16dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp" />

    <EditText
        android:id="@+id/codeEntery"
        android:layout_width="202dp"
        android:layout_height="39dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:hint="@string/prompt"
        android:inputType="text"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptView" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="85dp"
        android:layout_height="37dp"
        android:text="Submit"
        android:layout_marginRight="65dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/codeEntery" />
</android.support.constraint.ConstraintLayout>
